<resources>
    <string name="app_name">Cryptonade</string>
    <string name="refresh_pairs">Refresh Trading Pairs</string>
    <string name="refreshBalances">Refresh Balances</string>
    <string name="title_activity_api_settings">API Settings</string>
    <string name="action_settings">Settings</string>
    <string name="apiSettings">API Settings</string>
    <string name="profileName">Profile Name</string>
    <string name="save">Save</string>
    <string name="trade">Trade</string>
    <string name="open_orders">Open Orders</string>
    <string name="apiKey">API Key</string>
    <string name="apiSecret">API Secret</string>
    <string name="refresh_pairs_list">Refresh Pairs List</string>
    <string name="exchange_pairs">Exchange Pairs</string>
    <string name="title_activity_trading_pairs">Trading Pairs</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="placeOrder">Place Order</string>
    <string name="amount">Amount</string>
    <string name="selectOrderType">Select Order Type</string>
    <string name="selectTradePair">Select Trade Pair</string>
    <string name="enterTradeAmount">Enter Trade Amount</string>
    <string name="enterRate">Enter Rate</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="cancelAllOrders">Cancel All Orders</string>
    <string name="title_activity_orders">Orders</string>
    <string name="max">Max</string>
    <string name="last">Last</string>
    <string name="highest_bid">Highest Bid</string>
    <string name="lowest_ask">Lowest Ask</string>
    <string name="last_trade">Last Trade</string>
    <string name="volume">Volume</string>
    <string name="highest24hr">Highest 24Hr</string>
    <string name="lowest24hr">Lowest 24Hr</string>
    <string name="pair">Pair</string>
    <string name="ticker">Ticker</string>
    <string name="orders">Orders</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="order_books">Order Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="api_settings">API Settings</string>
    <string name="cancel">Cancel</string>
    <string name="exchange_type">Exchange Type</string>
    <string name="api_key">API Key</string>
    <string name="delete">Delete</string>
    <string name="api_secret">API Secret</string>
    <string name="lbl_id">Id:</string>
    <string name="ticker_information">Ticker Information</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="restore_pairs_list_from_exchange">Update Market Pairs From Exchange</string>
    <string name="refresh_balances">Refresh Balances</string>
    <string name="order_transactions">Order Transactions</string>
    <string name="timestamp">Timestamp</string>
    <string name="rate">Rate</string>
    <string name="fee">Fee</string>
    <string name="type">Type</string>
    <string name="invalid_api_msg">Invalid API key/secret.</string>
    <string name="order_id">Order Id</string>
    <string name="balances">Balances</string>
    <string name="order_successfully_cancelled">Order successfully cancelled.</string>
    <string name="order_successfully_placed">Trade placed successfully.\nOrder number:</string>
    <string name="security">Security</string>
    <string name="bids">Bids</string>
    <string name="asks">Asks</string>
    <string name="refresh_ticker_info">Refresh Ticker Info</string>
    <string name="refresh_order_books">Refresh Order Books</string>
    <string name="create_api_key">Create API Key</string>
    <string name="api_key_settings">API Key Settings</string>
    <string name="api_keys">API Keys</string>
    <string name="market_summary">Market Summary</string>
    <string name="exchange">Exchange</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="transactions">Transactions</string>
    <string name="no_open_orders">No open orders.</string>
    <string name="no_transactions_to_display">No transactions to display</string>
    <string name="coin_market_cap">Coin Market Cap</string>
    <string name="send_feedback">Send Feedback</string>
</resources>
