<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mattcormier.cryptonade.MainActivity">

    <Button
        android:id="@+id/btnHomeTicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ticker"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHomeOrders"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnHomeTrade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trade"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnHomeOrders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHomeTrade"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnHomeTradingPairs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/exchange_pairs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHomeTicker" />

    <Button
        android:id="@+id/btnHomeApiSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apiSettings"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHomeTradingPairs"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
