<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mattcormier.cryptonade.APISettingsActivity"
    tools:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnAPISettingsSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <Switch
                android:id="@+id/swAPISettingsActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"
                android:padding="8dp"
                android:text="@string/enabled"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/lblAPISettingsExchangeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/exchange_type"
                android:textColor="@color/colorPrimaryDark" />

            <Spinner
                android:id="@+id/spnAPISettingsExchangeType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/lblAPISettingsProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profileName"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/edAPISettingsProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lblAPISettingsAPIKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/apiKey"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/edAPISettingsAPIKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lblAPISettingsAPISecret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/apiSecret"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/edAPISettingsAPISecret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lblAPISettingsAPIOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edAPISettingsAPIOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:visibility="invisible" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAPISettingsSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        android:theme="@style/AccentButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
