<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clOrderBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mattcormier.cryptonade.OrderBookFragment">

    <TextView
        android:id="@+id/tvOrderBooksHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/order_books"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnOrderBookRefresh"
        android:layout_width="53dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/refresh_order_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_refresh_black_24dp" />

    <LinearLayout
        android:id="@+id/llOrderBooksMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrderBookRefresh">

        <LinearLayout
            android:id="@+id/llOrderBooksAsks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/my_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvOrderBooksAsksHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/asks"
                android:textAlignment="center"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llOrderBooksAsksListHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOrderBooksAsksHeaderPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorLightGray"
                    android:text="@string/price"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvOrderBooksAsksHeaderAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorLightGray"
                    android:text="@string/amount"
                    android:textSize="12sp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvOrderBooksAsks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOrderBooksBids"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/my_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvOrderBooksBidsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bids"
                android:textAlignment="center"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llOrderBooksBidsListHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOrderBooksBidsHeaderPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorLightGray"
                    android:text="@string/price"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvOrderBooksBidsHeaderAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorLightGray"
                    android:text="@string/amount"
                    android:textSize="12sp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvOrderBooksBids"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
