<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mattcormier.cryptonade.APISettingsFragment">

    <TextView
        android:id="@+id/lblAPISettingsExchangeType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exchange_type"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnAPISettingsExchangeType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblAPISettingsExchangeType"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/lblAPISettingsExchangeType"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/lblAPISettingsProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profileName"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnAPISettingsExchangeType"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/lblAPISettingsExchangeType" />

    <EditText
        android:id="@+id/edAPISettingsProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/lblAPISettingsProfileName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAPISettingsProfileName" />

    <TextView
        android:id="@+id/lblAPISettingsAPIKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apiKey"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/edAPISettingsProfileName"
        app:layout_constraintLeft_toLeftOf="@+id/edAPISettingsProfileName" />

    <EditText
        android:id="@+id/edAPISettingsAPIKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/lblAPISettingsAPIKey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAPISettingsAPIKey" />

    <TextView
        android:id="@+id/lblAPISettingsAPISecret"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apiSecret"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edAPISettingsAPIKey"
        app:layout_constraintLeft_toLeftOf="@+id/edAPISettingsAPIKey" />

    <EditText
        android:id="@+id/edAPISettingsAPISecret"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/lblAPISettingsAPISecret"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAPISettingsAPISecret" />

    <TextView
        android:id="@+id/lblAPISettingsAPIOther"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/edAPISettingsAPISecret"
        app:layout_constraintTop_toBottomOf="@+id/edAPISettingsAPISecret" />

    <EditText
        android:id="@+id/edAPISettingsAPIOther"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        android:visibility="invisible"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="@+id/lblAPISettingsAPIOther"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAPISettingsAPIOther" />

    <Button
        android:id="@+id/btnAPISettingsSave"
        android:theme="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/btnAPISettingsCancel"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnAPISettingsCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Switch
        android:id="@+id/swAPISettingsActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:checked="true"
        android:text="Is Active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
