<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblLiOrderTransactionTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Completed:"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLiOrderTransactionTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="October 12, 1999 11:00AM"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lblLiOrderTransactionTimestamp"
        app:layout_constraintTop_toTopOf="@+id/lblLiOrderTransactionTimestamp" />

    <TextView
        android:id="@+id/lblLiOrderTransactionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/type"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLiOrderTransactionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buy"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblLiOrderTransactionType"
        app:layout_constraintTop_toBottomOf="@+id/lblLiOrderTransactionType" />

    <TextView
        android:id="@+id/lblLiOrderTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/amount"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLiOrderTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.12345678"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblLiOrderTransactionAmount"
        app:layout_constraintTop_toTopOf="@+id/tvLiOrderTransactionRate" />

    <TextView
        android:id="@+id/lblLiOrderTransactionRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/rate"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLiOrderTransactionRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.12345678"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblLiOrderTransactionRate"
        app:layout_constraintTop_toBottomOf="@+id/lblLiOrderTransactionRate" />

    <TextView
        android:id="@+id/lblLiOrderTransactionFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/fee"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLiOrderTransactionFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00001234"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblLiOrderTransactionFee"
        app:layout_constraintTop_toBottomOf="@+id/lblLiOrderTransactionFee" />

</android.support.constraint.ConstraintLayout>